{
    "name": "MouseControlsPointAndClick",
    "maps": [
        {
            "name": "MouseRTS",
            "id": "78fe1106-d178-42de-925d-40295861e0d3",
            "actions": [
                {
                    "name": "Pan",
                    "type": "PassThrough",
                    "id": "2a60c28e-8965-450c-830f-a66e6bb69e13",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Zoom",
                    "type": "PassThrough",
                    "id": "c4dd056e-6c49-478e-871e-e5f56ce90667",
                    "expectedControlType": "Axis",
                    "processors": "Normalize(min=-1,max=1)",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryAction",
                    "type": "Button",
                    "id": "a29cecb5-855f-4695-a4cc-5713e2c10fdb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryAction",
                    "type": "Button",
                    "id": "8dde157a-a90c-4472-8744-722b43583bed",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9a5c48ef-9904-4426-a02b-86b3f3cb8279",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pan",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "681f1853-86ce-41e5-b35e-884b67bc70fe",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5b79936d-128b-41b1-af86-cd155d0dea8b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aecd967b-87b9-4ec3-ad62-445062300b8e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}